# game_of_life_wasm

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  build.sh  export.sh  test.sh
src/: lib.rs  utils.rs
static/: index.html
static/css/: styles.css
static/errors/: 404.html  50x.html
static/js/: .gitignore  app.js  app.ts  board.ts  boardinfo.ts  fPSMonitor.ts  stateManagement.ts
tests/: web.rs
www/: package-lock.json  package.json  webpack.config.js
www/src/: index.html
www/src/bundles/: app.js
www/src/errors/: 404.html  50x.html
www/src/ts/: app.ts  board.ts  boardinfo.ts
