[package]
name = "game_of_life_wasm"
description = "Conway's Game of Life using Rust and wasm."
version = "0.1.0"
authors = ["Soham Roy <sohamroy@sohamroy.me>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
dev-features = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
lto = true
panic = 'abort'